--- a/templates/dummy.html
+++ b/templates/dummy.html
@@ -16,7 +16,12 @@
         <a href="{% url 'admin:index' %}" class="nav-link">Admin page</a>
         <a href="{% url 'registration' %}" class="nav-link">registration</a>
         <a href="{% url 'home' %}" class="nav-link">Home</a>
+        {% if user.is_authenticated %}
+        <a href="{% url 'profile_display' %}" class="nav-link">profile_display</a>
+        <a href="{% url 'user_logout' %}" class=""nav-link>user_logout</a>
+        {% else %}
         <a href="{% url 'user_login'%}" class="nav-link">user_login</a>
+        {% endif %}
     </nav>
 
     <!-- Optional JavaScript; choose one of the two! -->
